2006-02-20  Jan Schmidt  <thaytan@mad.scientist.com>

	* configure.ac:
	Back to CVS nano

=== release 0.10.1 ===

2006-02-20  Jan Schmidt <thaytan@mad.scientist.com>

	* configure.ac:
	  releasing 0.10.1, "Slimy - yet satisfying"

2006-02-19  Jan Schmidt <thaytan@mad.scientist.com>

	* configure.ac:
	  Release 0.10.0.3 - pre-release for 0.10.1

2006-02-19  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/bz2/gstbz2.c:
	* ext/bz2/gstbz2dec.c:
	* ext/bz2/gstbz2dec.h:
	* ext/bz2/gstbz2enc.c:
	* ext/bz2/gstbz2enc.h:
	  Add proper copyright headers identifying Lutz Müller
	  as the author and copyright holder (#331600).

2006-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_state_movie):
	  Don't GST_LOG timestamps from nonexistent index
	  entries (#331582).

2006-02-17  Edward Hervey  <edward@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_state_header):
	Check that the size of the returned buffer is of the correct size
	because the parser assumes that.
	Fixes #331543.

2006-02-17  Jan Schmidt <thaytan@mad.scientist.com>

	* configure.ac:
	  Release 0.10.0.2 - pre-release for 0.10.1

2006-02-16  Edward Hervey  <edward@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_handle_src_event),
	(gst_qtdemux_loop), (qtdemux_sink_activate_pull):
	Don't stop the task if the pad isn't linked.

2006-02-15  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_chain):
	  It appears 100% equals 1/1 and not 100/1 ...

2006-02-15  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_post_buffering),
	(gst_qtdemux_chain):
	  When buffering MDAT data, show the user something is
	  happening by posting 'buffering' messages on the bus.

2006-02-14  Edward Hervey  <edward@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_init),
	(gst_qtdemux_handle_src_query), (gst_qtdemux_change_state),
	(next_entry_size), (gst_qtdemux_chain):